@@ -19,7 +19,9 @@
 
 	Conky is generally very good on resources.  However, certain objects in
 	Conky are harder on resources then others.  In particular, the $tail,
-	$top, and $graph objects are quite costly in comparison to the rest of Conky.
+	$top, $font, and $graph objects are quite costly in comparison to 
+	the rest of Conky.
+
 	If you do use them, please do not complain about memory or CPU usage,
 	unless you think something is going seriously wrong (mem leak, et cetera).
 
